# 2025Library

./: .1203_Latch.cpp.swp  .gitignore  1129_LEDBreath.cpp  1203_Latch.cpp  B11202015_ML_HW1.ipynb  CMakeLists.txt  LICENSE  Makefile  README.md  app  testingPush.txt  tree.txt
Samuel_try/src/: PCA9955B.cpp
Samuel_try/test/: GPIOmain.cpp
WS2812/: main.c
diary/: 241128.md
history/: 1223_latch_with_ws2812.cpp  OFController_Newtry.cpp  test  threadTry.cpp
history/Samuel_try/: README.md
history/Samuel_try/inc/: PCA9955B.h
history/Samuel_try/src/: GPIO74HC259.cpp
history/Samuel_try/test/: I2Cmain.cpp
inc/: .LEDController.h.swp  Config.h  GPIO74HC259.h  LEDController.h  OFController.h
src/: .NewAllMain.cpp.swp  1230.cpp  AllMain  AllMain.cpp  GPIO74HC259.cpp  LEDController.cpp  Makefile  NewAllMain.cpp  OFController.cpp  latch_with_ws2812.cpp
tests/: test_main.cpp
